--- a/experience.html
+++ b/experience.html
@@ -41,7 +41,7 @@
                             <div class="container_content_inner">
                                 <!--Title with text-->
                                 <div class="hide_title">
-                                    <h1 class = "title">Relevant Coursework</h1>
+                                    <h1 class = "title">Boston College TA</h1>
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
@@ -74,7 +74,7 @@
                         <div class="container_content">
                             <div class="container_content_inner">
                                 <div class="hide_title">
-                                    <h1 class = "title">Internship/Works</h1>
+                                    <h1 class = "title">Lead Website Developer</h1>
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
@@ -85,6 +85,88 @@
                         </div>
                     </div>
                 </li>
+                <li class="snap">
+                    <div class= 'container'>
+                        <div class="container_content">
+                            <div class="container_content_inner">
+                                <!--Title with text-->
+                                <div class="hide_title">
+                                    <h1 class = "title">Lead App Developer</h1>
+                                </div>
+                                <div class="hide_p">
+                                    <p class="p">
+                                        Computer Science I, Computer Science II, Logic and Computation, Computer Systems, Randomness and Computation, Algorithms, and Computer Organization (Not from BC: Harvard’s cs50, Udemy’s 100 days of Python)
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <!--Image-->
+                        <div class="container_outer_img">
+                            <div class="hide_title">
+                                    <h1 class = "title">Technical Skills</h1>
+                                </div>
+                                <div class="hide_p">
+                                    <p class="p">
+•	Advanced in: Python, HTML, CSS, JavaScript, GitHub, React, and Flask
+•	Proficient in: Java, SQLite, GoDaddy, and CPanel
+•	Familiar with: React Native, C, Swift, Go, Firebase, Django, and Stata
+                                    </p>
+                                </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="snap">
+                    <div class= 'container off'>
+                        <div class="container_outer_img">
+                            <img src='australia.jpg'  alt="" class="container_img picture_resize"/>
+                        </div>
+                        <div class="container_content">
+                            <div class="container_content_inner">
+                                <div class="hide_title">
+                                    <h1 class = "title">IT Intern</h1>
+                                </div>
+                                <div class="hide_p">
+                                    <p class="p">
+                                        info on work experience in click on format button
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+
+                <li class="snap">
+                    <div class= 'container'>
+                        <div class="container_content">
+                            <div class="container_content_inner">
+                                <!--Title with text-->
+                                <div class="hide_title">
+                                    <h1 class = "title">Head Secretary</h1>
+                                </div>
+                                <div class="hide_p">
+                                    <p class="p">
+                                        Computer Science I, Computer Science II, Logic and Computation, Computer Systems, Randomness and Computation, Algorithms, and Computer Organization (Not from BC: Harvard’s cs50, Udemy’s 100 days of Python)
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <!--Image-->
+                        <div class="container_outer_img">
+                            <div class="hide_title">
+                                    <h1 class = "title">Technical Skills</h1>
+                                </div>
+                                <div class="hide_p">
+                                    <p class="p">
+•	Advanced in: Python, HTML, CSS, JavaScript, GitHub, React, and Flask
+•	Proficient in: Java, SQLite, GoDaddy, and CPanel
+•	Familiar with: React Native, C, Swift, Go, Firebase, Django, and Stata
+                                    </p>
+                                </div>
+                        </div>
+                    </div>
+                </li>
+
+
             </div>
         <div>
             <hr class="solid">
