--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        <b>Personal Project/Prototype (2.2.2021,2.25.2021)-</b>Inspired by my love of tetris and my friend Noah Yim. To accomplish the provided result, I utilized what I learned from the 100 Days of Python course taught by Angela Yu, and used GUI “turtle” and keyboard listener “keyboard”, both within Python. This Tetris program, contrary to the older counterparts, includes the “piece hold”, “instant drop”, and “tucking” functions, along with a block algorithm unique to modern day Tetris. 
+                                        <b>Startup (6.1.2021,12.31.2021)-</b> D!ng 
                                     </p>
                                 </div>
                             </div>
@@ -76,7 +76,7 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        <b>Personal Project (1.20.2021,2.2.2021)- </b>Preceded the tetris program, this is one of the programs I coded as part of the 100 Days of Python course. It implements GUI "turtle" and keyboard listener "keyboard" within Python. Some of the functionalities of this program is the ball bouncing at consistent angles, except for when it hits the edge of a paddle, and a paddle AI, which follows the ball at a delayed speed.
+                                        <b>Startup (6.1.2021,12.31.2021)- </b> D!ng
                                     </p>
                                 </div>
                             </div>
@@ -94,7 +94,7 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        <b>Personal Project/Prototype (2.2.2021,2.25.2021)-</b>Inspired by my love of tetris and my friend Noah Yim. To accomplish the provided result, I utilized what I learned from the 100 Days of Python course taught by Angela Yu, and used GUI “turtle” and keyboard listener “keyboard”, both within Python. This Tetris program, contrary to the older counterparts, includes the “piece hold”, “instant drop”, and “tucking” functions, along with a block algorithm unique to modern day Tetris. 
+                                        <b>Part Time Internship (6.1.2021,9.1.2021)-</b> RPCA
                                     </p>
                                 </div>
                             </div>
@@ -124,7 +124,7 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        <b>Personal Project (1.20.2021,2.2.2021)- </b>Preceded the tetris program, this is one of the programs I coded as part of the 100 Days of Python course. It implements GUI "turtle" and keyboard listener "keyboard" within Python. Some of the functionalities of this program is the ball bouncing at consistent angles, except for when it hits the edge of a paddle, and a paddle AI, which follows the ball at a delayed speed.
+                                        <b>Full Time Internship (5.24.2021,8.27.2021)- </b>
                                     </p>
                                 </div>
                             </div>
