--- a/projects.html
+++ b/projects.html
@@ -94,7 +94,7 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        <b>Part Time Internship (6.1.2021,9.1.2021)-</b> RPCA
+                                        <b>Part-Time Internship (6.1.2021,9.1.2021)-</b> RPCA
                                     </p>
                                 </div>
                             </div>
@@ -124,7 +124,7 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        <b>Full Time Internship (5.24.2021,8.27.2021)- </b>
+                                        <b>Full-Time Internship (5.24.2021,8.27.2021)- </b>
                                     </p>
                                 </div>
                             </div>
