--- a/profile.html
+++ b/profile.html
@@ -44,7 +44,7 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        My name is Justin Park and I am a Junior at Boston College studying for a B.S. in Computer Science.
+                                        Hello, my name is Justin Park and I am an aspiring software engineer studying at Boston College. I am currently a junior and am pursuing a Bachelor in Science in Computer Science and Major in Economics.
                                     </p>
                                 </div>
                             </div>
@@ -118,68 +118,6 @@
                     </div>
                 </li>
                 <li class="snap">
-                    <div class= 'container off'>
-                        <div class="container_outer_img">
-                            <img src='australia.jpg'  alt="" class="container_img picture_resize"/>
-                        </div>
-                        <div class="container_content">
-                            <div class="container_content_inner">
-                                <div class="hide_title">
-                                    <h1 class = "title">Computer Science</h1>
-                                </div>
-                                <div class="hide_p">
-                                    <p class="p">
-                                        <div class="p">I started my Computer Science engagement (including any other derivation of it) at my Freshman year of college.</div>
-                                        <div class="p">I have worked on several seperate programs, which are detailed in their respective sections in the website.</div>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-                <li class="snap">
-                    <div class= 'container'>
-                        <div class="container_content">
-                            <div class="container_content_inner">
-                                <div class="hide_title">
-                                    <h1 class = "title">Hobbies</h1>
-                                </div>
-                                <div class="hide_p">
-                                    <p class="p">
-                                        In my free time, I like to dance with my college dance team, AeroK, or go to the gym. I also like to watch shows (right now I really like Daredevil and Vincenzo), play games of all kinds, and sing in the shower.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="container_outer_img">
-                            <img src='aerok.jpg'  alt="" class="container_img picture_resize"/>
-                        </div>
-                    </div>
-                </li>
-                <li class="snap">
-                    <div class= 'container off'>
-                        <div class="container_outer_img">
-                            <img src='cowboyhat.jpg'  alt="" class="container_img picture_resize"/>
-                        </div>
-                        <div class="container_content">
-                            <div class="container_content_inner">
-                                <div class="hide_title">
-                                    <h1 class = "title">Young</h1>
-                                </div>
-                                <div class="hide_p">
-                                    <p class="p">
-                                        When I was young, I was extremely interested in playing the piano and being in musicals. The picture in the top right is me playing piano at Merkin Hall and the picture on the bottom right is me playing Dan Schwartz in "25th Annual Putnam County Spelling Bee". I also worked odd jobs at Wendys, Tours Les Jours, and as a tutor.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="container_content">
-                            <img src='piano.jpg'  alt="" class="container_img picture_resize1"/>
-                            <img src='theatre.jpg'  alt="" class="container_img picture_resize"/>
-                        </div>
-                    </div>
-                </li>
-                <li class="snap">
                     <div class= 'container'>
                         <div class="container_content">
                             <div class="container_content_inner">
@@ -191,7 +129,7 @@
                             </div>
                         </div>
                         <div class="container_outer_img">
-                            <img src='dogs.jpg'  alt="" class="container_img picture_resize"/>
+                            <img src='jamieari.jpg'  alt="" class="container_img picture_resize"/>
                         </div>
                     </div>
                 </li>
