--- a/profile.html
+++ b/profile.html
@@ -94,6 +94,27 @@
                         </div>
                     </div>
                 </li>
+
+                <li class="snap">
+                    <div class= 'container'>
+                        <div class="container_content">
+                            <div class="container_content_inner">
+                                <div class="hide_title">
+                                    <h1 class = "title">Hobbies</h1>
+                                </div>
+                                <div class="hide_p">
+                                    <p class="p">
+                                        In my free time, I like to dance with my college dance team, AeroK, or go to the gym. I also like to watch shows (right now I really like Daredevil and Vincenzo), play games of all kinds, and sing in the shower.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="container_outer_img">
+                            <img src='aerok.jpg'  alt="" class="container_img picture_resize"/>
+                        </div>
+                    </div>
+                </li>
+
                 <li class="snap">
                     <div class= 'container off'>
                         <div class="container_outer_img">
@@ -117,6 +138,7 @@
                         </div>
                     </div>
                 </li>
+
                 <li class="snap">
                     <div class= 'container'>
                         <div class="container_content">
