--- a/profile.html
+++ b/profile.html
@@ -96,7 +96,10 @@
                 </li>
 
                 <li class="snap">
-                    <div class= 'container'>
+                    <div class= 'container off'>
+                        <div class="container_outer_img">
+                            <img src='aerok.jpg'  alt="" class="container_img picture_resize"/>
+                        </div>
                         <div class="container_content">
                             <div class="container_content_inner">
                                 <div class="hide_title">
@@ -108,9 +111,6 @@
                                     </p>
                                 </div>
                             </div>
-                        </div>
-                        <div class="container_outer_img">
-                            <img src='aerok.jpg'  alt="" class="container_img picture_resize"/>
                         </div>
                     </div>
                 </li>
