--- a/profile.html
+++ b/profile.html
@@ -94,7 +94,6 @@
                         </div>
                     </div>
                 </li>
-
                 <li class="snap">
                     <div class= 'container off'>
                         <div class="container_outer_img">
@@ -114,7 +113,6 @@
                         </div>
                     </div>
                 </li>
-
                 <li class="snap">
                     <div class= 'container off'>
                         <div class="container_outer_img">
@@ -127,7 +125,7 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        When I was young, I was extremely interested in playing the piano and being in musicals. The picture in the top right is me playing piano at Merkin Hall and the picture on the bottom right is me playing Dan Schwartz in "25th Annual Putnam County Spelling Bee". I also worked odd jobs at Wendys, Tours Les Jours, and as a tutor.
+                                        When I was young, I was extremely interested in playing the piano and being in musicals. The picture in the top right is me playing piano at Merkin Hall and the picture on the bottom right is me playing Dan Schwartz in "25th Annual Putnam County Spelling Bee".
                                     </p>
                                 </div>
                             </div>
@@ -138,7 +136,6 @@
                         </div>
                     </div>
                 </li>
-
                 <li class="snap">
                     <div class= 'container'>
                         <div class="container_content">
