--- a/projects.html
+++ b/projects.html
@@ -150,7 +150,7 @@
                         </div>
                         <!--Image-->
                         <div class="container_outer_img">
-                            <video width="500" autoplay loop>
+                            <video max-width="500" autoplay loop>
                                 <source src="tetris.mp4" type="video/mp4">
                                 Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                             </video>
@@ -160,7 +160,7 @@
                 <li class="snap">
                     <div class= 'container off'>
                         <div class="container_outer_img">
-                            <video width="500" autoplay loop>
+                            <video max-width="500" autoplay loop>
                                 <source src="pong.mp4" type="video/mp4">
                                 Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                             </video>
@@ -194,7 +194,7 @@
                             </div>
                         </div>
                         <div class="container_outer_img">
-                            <video width="500" autoplay loop>
+                            <video max-width="500" autoplay loop>
                                 <source src="snake.mp4" type="video/mp4">
                                 Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                             </video>
