--- a/profile.html
+++ b/profile.html
@@ -85,7 +85,8 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        Coursework that I have taken relevant to my area of study is: Computer Science I, Computer Science II, Logic and Computation, Computer Systems, Randomness and Computation, Algorithms, and Computer Organization (Not from BC: Harvard’s cs50, Udemy’s 100 days of Python)                                      </p>
+                                        Coursework that I have taken relevant to my area of study is: Computer Science I, Computer Science II, Logic and Computation, Computer Systems, Randomness and Computation, Algorithms, Computer Organization, and Principles of Programming Languages (Not from BC: Harvard’s cs50, Udemy’s 100 days of Python)
+                                    </p>
                                 </div>
                             </div>
                         </div>
