--- a/profile.html
+++ b/profile.html
@@ -68,8 +68,9 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        <div class="p">I started my Computer Science engagement (including any other derivation of it) at my Freshman year of college.</div>
-                                        <div class="p">I have worked on several seperate programs, which are detailed in their respective sections in the website.</div>
+                                        <div class="p">Advanced in: Python, HTML, CSS, JavaScript, GitHub, React.js, and Flask </div>
+                                        <div class="p">Proficient in: Java, SQLite, GoDaddy, and CPanel </div>
+                                        <div class="p">Familiar with: React Native, C, Swift, Go, Firebase, Django, and Stata </div>
                                     </p>
                                 </div>
                             </div>
