--- a/profile.html
+++ b/profile.html
@@ -56,7 +56,7 @@
                     </div>
                 </li>
                 <!--Each future iteration of the element is slightly altered for style, but largely the same format-->
-                <li class="snap">
+                {% comment %} <li class="snap">
                     <div class= 'container off'>
                         <div class="container_outer_img">
                             <img src='australia.jpg'  alt="" class="container_img picture_resize"/>
@@ -95,7 +95,7 @@
                             <img src='aerok.jpg'  alt="" class="container_img picture_resize"/>
                         </div>
                     </div>
-                </li>
+                </li> {% endcomment %}
                 <li class="snap">
                     <div class= 'container off'>
                         <div class="container_outer_img">
@@ -116,7 +116,7 @@
                     </div>
                 </li>
                 <li class="snap">
-                    <div class= 'container off'>
+                    <div class= 'container'>
                         <div class="container_outer_img">
                             <img src='cowboyhat.jpg'  alt="" class="container_img picture_resize"/>
                         </div>
@@ -139,7 +139,7 @@
                     </div>
                 </li>
                 <li class="snap">
-                    <div class= 'container'>
+                    <div class= 'container off'>
                         <div class="container_content">
                             <div class="container_content_inner">
                                 <div class="hide_p">
