--- a/profile.html
+++ b/profile.html
@@ -23,7 +23,7 @@
                 <tr>
                     <!--Links to navigate through the different webpages-->
                     <td class = links><a class = nav href="profile.html">Profile</a></td>
-                    <td class = links><a class = nav href="experience.html">Experience</a></td>
+                    <td class = links><a class = nav href="resume.html">Resume</a></td>
                     <td class = links><a class = nav href="projects.html">Projects</a></td>
                 </tr>
             </table>
