--- a/projects.html
+++ b/projects.html
@@ -150,7 +150,7 @@
                         </div>
                         <!--Image-->
                         <div class="container_outer_img">
-                            <video width="1000" autoplay loop>
+                            <video height="500" width="500" autoplay loop>
                                 <source src="tetris.mp4" type="video/mp4">
                                 Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                             </video>
