--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,6 @@
             <!--Scroll Snap Start-->
             <div class="parent">
                 <!--First element within scroll snap-->
-
                 <li class="snap">
                     <!--Individual containers within each scroll snap element with transition style classes-->
                     <div class= 'container'>
@@ -53,13 +52,12 @@
                         <!--Image-->
                         <div class="container_outer_img">
                             <video width="500" autoplay loop>
-                                <source src="connecddinghome.mp4" type="video/mp4">
+                                <source src="connecdinghome.mp4" type="video/mp4">
                                 Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                             </video>
                         </div>
                     </div>
                 </li>
-
                 <!--Each future iteration of the element is slightly altered for style, but largely the same format-->
                 <li class="snap">
                     <div class= 'container off'>
@@ -83,7 +81,6 @@
                         </div>
                     </div>
                 </li>
-
                 <li class="snap">
                     <div class= 'container'>
                         <div class="container_content">
@@ -108,7 +105,6 @@
                         </div>
                     </div>
                 </li>
-
                 <li class="snap">
                     <div class= 'container off'>
                         <div class="container_outer_img">
@@ -131,8 +127,6 @@
                         </div>
                     </div>
                 </li>
-
-
                 <li class="snap">
                     <div class= 'container'>
                         <div class="container_content">
@@ -194,7 +188,7 @@
                             </div>
                         </div>
                         <div class="container_outer_img">
-                            <video width="400" autoplay loop>
+                            <video width="50%" autoplay loop>
                                 <source src="snake.mp4" type="video/mp4">
                                 Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                             </video>
