--- a/projects.html
+++ b/projects.html
@@ -51,7 +51,7 @@
                         </div>
                         <!--Image-->
                         <div class="container_outer_img">
-                            <video width="500" autoplay loop>
+                            <video width="100%" autoplay loop>
                                 <source src="connecdinghome.mp4" type="video/mp4">
                                 Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                             </video>
@@ -62,7 +62,7 @@
                 <li class="snap">
                     <div class= 'container off'>
                         <div class="container_outer_img">
-                            <video width="500" autoplay loop>
+                            <video width="100%" autoplay loop>
                                 <source src="connecdingapp.mp4" type="video/mp4">
                                 Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                             </video>
@@ -98,7 +98,7 @@
                         </div>
                         <!--Image-->
                         <div class="container_outer_img">
-                            <video width="500" autoplay loop>
+                            <video width="100%" autoplay loop>
                                 <source src="RPCA.mp4" type="video/mp4">
                                 Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                             </video>
@@ -108,7 +108,7 @@
                 <li class="snap">
                     <div class= 'container off'>
                         <div class="container_outer_img">
-                            <video width="500" autoplay loop>
+                            <video width="100%" autoplay loop>
                                 <source src="AAO.mp4" type="video/mp4">
                                 Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                             </video>
@@ -154,7 +154,7 @@
                 <li class="snap">
                     <div class= 'container off'>
                         <div class="container_outer_img">
-                            <video width="400" autoplay loop>
+                            <video width="100%" autoplay loop>
                                 <source src="pong.mp4" type="video/mp4">
                                 Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                             </video>
