--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
                             <div class="container_content_inner">
                                 <!--Title with text-->
                                 <div class="hide_title">
-                                    <h1 class = "title">ConnecD!ng</h1>
+                                    <h1 class = "title">ConnecD!ng Home</h1>
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
@@ -70,7 +70,7 @@
                         <div class="container_content">
                             <div class="container_content_inner">
                                 <div class="hide_title">
-                                    <h1 class = "title">ConnecD!ng2</h1>
+                                    <h1 class = "title">ConnecD!ng App</h1>
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
