--- a/projects.html
+++ b/projects.html
@@ -109,7 +109,7 @@
                     <div class= 'container off'>
                         <div class="container_outer_img">
                             <video width="100%" autoplay loop>
-                                <source src="AAI.mp4" type="video/mp4">
+                                <source src="AAO.mp4" type="video/mp4">
                                 Your browser does not support the video tag. <!-- Text to be shown incase browser doesnt support html5 -->
                             </video>
                         </div>
