--- a/resume.html
+++ b/resume.html
@@ -55,9 +55,9 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        <div class="p">Advanced in: Python, HTML, CSS, JavaScript, GitHub, React.js, and Flask </div>
-                                        <div class="p">Proficient in: Java, SQLite, GoDaddy, and CPanel </div>
-                                        <div class="p">Familiar with: React Native, C, Swift, Go, Firebase, Django, and Stata </div>
+                                        <div class="p">Advanced in: Python, HTML, CSS, JavaScript, GitHub, React.js, Flask </div>
+                                        <div class="p">Proficient in: Java, SQLite, GoDaddy, CPanel </div>
+                                        <div class="p">Familiar with: React Native, C, Swift, Go, Firebase, Django, Stata </div>
                                     </p>
                                 </div>
                             </div>
