--- a/resume.html
+++ b/resume.html
@@ -74,13 +74,14 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        Computer Science I, Computer Science II, Logic and Computation, Computer Systems, Randomness and Computation, Algorithms, and Computer Organization (Not from BC: Harvard’s cs50, Udemy’s 100 days of Python)
+                                        <img src='BCLogo.jpg'  alt="" class="container_img picture_resize"/>
                                     </p>
                                 </div>
                             </div>
                         </div>
                         <!--Image-->
                         <div class="container_outer_img">
+                            info info info
                         </div>
                     </div>
                 </li>
