--- a/resume.html
+++ b/resume.html
@@ -74,7 +74,7 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        <img src='BCLogo.jpg'  alt="" class="container_img picture_resize"/>
+                                        <img src='BCLogo.png'  alt="" class="container_img picture_resize"/>
                                     </p>
                                 </div>
                             </div>
