--- a/resume.html
+++ b/resume.html
@@ -43,7 +43,7 @@
                             </div>
                             <div class="hide_p">
                                 <p class="p">
-                                    Coursework that I have taken relevant to my area of study is: Computer Science I, Computer Science II, Logic and Computation, Computer Systems, Randomness and Computation, Algorithms, Computer Organization, and Principles of Programming Languages (Not from BC: Harvard’s cs50, Udemy’s 100 days of Python)
+                                    <b>Coursework that I have taken relevant to my area of study is: </b>Computer Science I, Computer Science II, Logic and Computation, Computer Systems, Randomness and Computation, Algorithms, Computer Organization, and Principles of Programming Languages (Not from BC: Harvard’s cs50, Udemy’s 100 days of Python)
                                 </p>
                             </div>
                         </div>
@@ -55,9 +55,9 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        <div class="p">Advanced in: Python, HTML, CSS, JavaScript, GitHub, React.js, Flask </div>
-                                        <div class="p">Proficient in: Java, SQLite, GoDaddy, CPanel </div>
-                                        <div class="p">Familiar with: React Native, C, Swift, Go, Firebase, Django, Stata </div>
+                                        <div class="p"><b>Advanced in: </b>Python, HTML, CSS, JavaScript, GitHub, React.js, Flask </div>
+                                        <div class="p"><b>Proficient in: </b>Java, SQLite, GoDaddy, CPanel </div>
+                                        <div class="p"><b>Familiar with: </b>React Native, C, Swift, Go, Firebase, Django, Stata </div>
                                     </p>
                                 </div>
                             </div>
