--- a/resume.html
+++ b/resume.html
@@ -70,7 +70,10 @@
                         <div class="container_content">
                             <div class="container_content_inner">
                                 <div class="hide_title">
-                                    <h1 class = "title">Boston College TA</h1>
+                                    <h1 class = "title">Logic and Computation TA</h1>
+                                </div>
+                                <div>
+                                    Boston College
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
@@ -79,7 +82,9 @@
                                 </div>
                             </div>
                         </div>
-                        <!--Image-->
+                        <div>
+                            September 2021 - Present
+                        </div>
                         <div class="container_outer_img">
                             info info info
                         </div>
