--- a/resume.html
+++ b/resume.html
@@ -77,7 +77,7 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        <img src='BCLogo.png'  alt="" class="container_img picture_resize"/>
+                                        <img src='BCLogo.jpeg'  alt="" class="container_img picture_resize"/>
                                     </p>
                                 </div>
                             </div>
