--- a/resume.html
+++ b/resume.html
@@ -72,12 +72,9 @@
                                 <div class="hide_title">
                                     <h1 class = "title">Logic and Computation TA</h1>
                                 </div>
-                                <div>
-                                    Boston College
-                                </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        <img src='BCLogo.jpeg'  alt="" class="container_img picture_resize"/>
+                                        <img src='BCLogo.jpeg'  alt="" style="width=150%"/>
                                     </p>
                                 </div>
                             </div>
