--- a/resume.html
+++ b/resume.html
@@ -90,7 +90,7 @@
                 <li class="snap">
                     <div class= 'container'>
                         <div class="container_outer_img">
-                            <img src='australia.jpg'  alt="" class="container_img picture_resize"/>
+                            <img src='ConnecDingLogo.png'  alt="" class="container_img picture_resize"/>
                         </div>
                         <div class="container_content">
                             <div class="container_content_inner">
@@ -123,13 +123,16 @@
                         </div>
                         <!--Image-->
                         <div class="container_outer_img">
+                            <div class="hide_p">
+                                <img src='RPCALogo.jpeg'  alt="" style="width=150%"/>
+                            </div>
                         </div>
                     </div>
                 </li>
                 <li class="snap">
                     <div class= 'container'>
                         <div class="container_outer_img">
-                            <img src='australia.jpg'  alt="" class="container_img picture_resize"/>
+                            <img src='AAOLogo.jpg'  alt="" class="container_img picture_resize"/>
                         </div>
                         <div class="container_content">
                             <div class="container_content_inner">
