--- a/resume.html
+++ b/resume.html
@@ -74,7 +74,7 @@
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
-                                        <img src='BCLogo.jpeg'  alt="" style="width=150%"/>
+                                        <img src='BCLogo.jpeg'  alt="" style="width=400px"/>
                                     </p>
                                 </div>
                             </div>
