--- a/resume.html
+++ b/resume.html
@@ -43,7 +43,7 @@
                             </div>
                             <div class="hide_p">
                                 <p class="p">
-                                    <b>Coursework that I have taken relevant to my area of study is: </b><br>Computer Science I, Computer Science II, Logic and Computation, Computer Systems, Randomness and Computation, Algorithms, Computer Organization, and Principles of Programming Languages (Not from BC: Harvard’s cs50, Udemy’s 100 days of Python)
+                                    <b>Coursework that I have taken relevant to my area of study is: </b>Computer Science I, Computer Science II, Logic and Computation, Computer Systems, Randomness and Computation, Algorithms, Computer Organization, and Principles of Programming Languages (Not from BC: Harvard’s cs50, Udemy’s 100 days of Python)
                                 </p>
                             </div>
                         </div>
