--- a/resume.html
+++ b/resume.html
@@ -124,7 +124,7 @@
                         <!--Image-->
                         <div class="container_outer_img">
                             <div class="hide_p">
-                                <img src='RPCALogo.jpeg'  alt="" style="width=150%"/>
+                                <img src='RPCALogo.jpg'  alt="" style="width=150%"/>
                             </div>
                         </div>
                     </div>
@@ -132,7 +132,7 @@
                 <li class="snap">
                     <div class= 'container'>
                         <div class="container_outer_img">
-                            <img src='AAOLogo.jpg'  alt="" class="container_img picture_resize"/>
+                            <img src='AAOLogo.png'  alt="" class="container_img picture_resize"/>
                         </div>
                         <div class="container_content">
                             <div class="container_content_inner">
