--- a/resume.html
+++ b/resume.html
@@ -165,6 +165,9 @@
                         </div>
                         <!--Image-->
                         <div class="container_outer_img">
+                            <div class="hide_p">
+                                <img src='LuckyStarLogo.jpeg'  alt="" style="width=150%"/>
+                            </div>
                         </div>
                     </div>
                 </li>
