--- a/resume.html
+++ b/resume.html
@@ -70,7 +70,7 @@
                         <div class="container_content">
                             <div class="container_content_inner">
                                 <div class="hide_title">
-                                    <h1>Logic and Computation TA</h1>
+                                    <h1 stlye=font-size="3vh">Logic and Computation TA</h1>
                                 </div>
                                 <div class="hide_p">
                                     <p class="p">
