--- a/resume.html
+++ b/resume.html
@@ -166,7 +166,7 @@
                         <!--Image-->
                         <div class="container_outer_img">
                             <div class="hide_p">
-                                <img src='LuckyStarLogo.jpeg'  alt="" style="width=150%"/>
+                                <img src='LuckyStarLogo.png'  alt="" style="width=150%"/>
                             </div>
                         </div>
                     </div>
